Fix issue with screen too wide (4k)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,8 @@ body {
   transform: scale(1);
   animation-fill-mode: forwards;
   width: 100%;
+  max-height: 100vh;
+  object-fit: cover;
 }
 
 #TextMarry {
